kubernetes/apps/default/sabnzbd/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
      app.kubernetes.io/instance: sabnzbd
      app.kubernetes.io/controller: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app.kubernetes.io/instance: sabnzbd
        app.kubernetes.io/controller: sabnzbd
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-operations/sabnzbd:4.5.5@sha256:f5570c0a370596ab656db6d3baa830b90a6fd9952b71ae805d022a2dcb3db12f
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /api?mode=version
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /api?mode=version
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 10m
              memory: 250Mi
            limits:
              cpu: 1000m
              memory: 8000Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
