kubernetes/apps/default/sabnzbd/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/controller: sabnzbd
