kubernetes/apps/default/sabnzbd/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: default
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["len([BODY]) == 0"]
      group: internal
      dns:
        query-name: sabnzbd.unscfleet.com
        query-type: A
      url: 1.1.1.1
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - sabnzbd.unscfleet.com
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 80
